# python-numpy-sample

./: .flake8  .pre-commit-config.yaml  README.md  essentials.ipynb  pyproject.toml  quize.ipynb  sample.csv  tutorial.ipynb
